dellambrogio/dellambrogio-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: dellambrogio
  namespace: dellambrogio
spec:
  selector:
    app: dellambrogio
  ports:
    - port: 80
      targetPort: 80
